First item is being added to the first envelope and hte other messages are behind it. Now we want to make sure a new envelope is generated for each message

--- a/messagesboard_style.css
+++ b/messagesboard_style.css
@@ -268,7 +268,7 @@ body{
 
 }
 
-#where_messages_appear2 {
+#where_messages_appear {
     text-align: center;
     font-size: 14px;
     font-family: "Lato", sans-serif;
@@ -375,7 +375,7 @@ body{
 
 }
 
-#where_messages_appear3 {
+#where_messages_appear {
     text-align: center;
     font-size: 14px;
     font-family: "Lato", sans-serif;
